infra/k8s/apps/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: e-commerce
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/search/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: search-service
            port:
              number: 4000
      - path: /api/cart/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: cart-service
            port:
              number: 8080
      - path: /api/products/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: products-service
            port:
              number: 5000
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: store-ui-service
            port:
              number: 80
